<resources>
    <string name="app_name">Nakertrans</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sumberdata">Sumber Data</string>
    <string name="title_program">Program</string>
    <string name="title_berita">Berita</string>
    <string name="title_pengaturan">Pengaturan</string>
    <string name="title_new">Tambah Baru</string>
    <string name="title_share">Share</string>
    <string name="title_detail">Detail</string>
    <string name="title_delete">Delete</string>
    <string name="title_table_name">Table Name</string>
    <string name="title_download">Download</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_drawer_menu">DrawerMenu</string>
    <string name="title_tercapai">Tercapai</string>
    <string name="title_referensi">Referensi</string>
    <string name="title_validasi">Validasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tempat_ttl">Tempat/Tanggal Lahir</string>
    <string name="tempat">Tempat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="rtrw">RT/RW</string>
    <string name="keldesa">Kel/Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="agama">Agama</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="pilih_agama">Pilih Agama</string>
    <string name="pilih_jk">Pilih Jenis Kelamin</string>
    <string name="pilih_status">Pilih Status</string>
    <string name="pilih_pekerjaan">Pilih Pekerjaan</string>
    <string name="pilih_kewarganegaraan">Pilih Kewarganegaraan</string>
    <string name="agama_islam">Islam</string>
    <string name="agama_protestan">Protestan</string>
    <string name="agama_katolik">Katolik</string>
    <string name="agama_budha">Budha</string>
    <string name="agama_hindu">Hindu</string>
    <string name="agama_konghucu">Konghucu</string>
    <string name="status_bkawin">Belum Kawin</string>
    <string name="status_skawin">Kawin</string>
    <string name="jk_laki">Laki - Laki</string>
    <string name="jk_perempuan">Perempuan</string>
    <string name="pekerjaan_belum">Belum Bekerja</string>
    <string name="pekerjaan_pelajar">Pelajar/Mahasiswa</string>
    <string name="pekerjaan_sbekerja">Sudah Bekerja</string>
    <string name="warga_wni">WNI</string>
    <string name="warga_wna">WNA</string>
    <string name="simpan">Simpan</string>
    <string name="perbaharui">Perbaharui</string>
    <string name="form_nama_program">Nama Program</string>
    <string name="form_sumber_data">Sumber Data</string>
    <string name="form_kriteria">Kriteria</string>
    <string name="form_value_kriteria">Value Kriteria</string>
    <string name="form_tanggal_mulai">Tanggal Mulai</string>
    <string name="form_tanggal_selesai">Tanggal Selesai</string>
    <string name="title_operasi">Operasi</string>
    <string name="title_about">About</string>
    <string name="title_app_info">App info</string>
    <string name="title_terms">Syarat dan Kebijakan Privasi</string>
    <string name="title_akun">Akun</string>
    <string name="title_username">username</string>
    <string name="title_ubah_pass">Ubah password</string>
    <string name="title_pilih_gambar">Pilih gambar</string>
    <string name="title_judul_berita">Judul berita</string>
    <string name="title_deskripsi">Deskripsi...</string>
    <string name="title_pass_lama">Password lama</string>
    <string name="title_pass_baru">Password baru</string>
    <string name="title_pass_retype">Ulangi Password</string>
    <string name="title_masuk">Masuk</string>
    <string name="title_lupa_kata_sandi">Lupa kata sandi</string>
    <string name="title_proses_sandi">Reset sandi</string>
    <string name="title_kembali_login">Kembali kehalaman login</string>
</resources>